pagination layout shift fixed

--- a/frontend-public/src/styles/general/pagination.css
+++ b/frontend-public/src/styles/general/pagination.css
@@ -3,6 +3,13 @@
   align-items: center;
   gap: 0.5rem;
 }
+.pagination {
+  min-height: 2.188rem;
+}
+
+.pagination.loading {
+  visibility: hidden;
+}
 
 .pagination button {
   border: none;
